[package]
name = "projectman"
version = "0.1.3"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"
description = "projectman(in crate.io) is the Rust port of Projectman by Saurabh Daware. ProjectMan is a CLI which lets you add projects to favorites using command `pm add` and open them from anywhere you want using command `pm open`.\n Along with this there are also other commands like pm seteditor, pm remove."
license = "MIT"
readme = "README.md"
keywords = ["cli", "project-management"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
structopt = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
dialoguer = "0.4.0"
colored = "1.8"

[[bin]]
name="pm"
path="src/main.rs"
