[package]
name = "projectman"
version = "0.1.6"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"
description = "projectman(in crate.io) is the Rust port of Projectman by Saurabh Daware. ProjectMan is a CLI which lets you add projects to favorites using command `pm add` and open them from anywhere you want using command `pm open`.\n Along with this there are also other commands like pm seteditor, pm remove."
license = "MIT"
readme = "README.md"
keywords = ["cli", "project-management"]
categories = ["command-line-utilities"]
repository = "https://github.com/hskang9/projectman-rust"

[badges]
travis-ci = { repository = "hskang9/projectman-rust", branch = "master" }

[dependencies]
dirs = "4.0.0"
structopt = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
dialoguer = "0.10.2"
colored = "2.0.0"

[[bin]]
name="pm"
path="src/main.rs"
